<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="32dp"
    android:paddingBottom="8dp"
    tools:context=".ui.HomeFragment">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/bg_rounded_frame"
        android:contentDescription="@string/profile_image_placeholder"
        android:elevation="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Username" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        tools:text="\@login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_rounded_full_white"
        android:clickable="true"
        android:elevation="2dp"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_full_white_xs"
                android:contentDescription="@string/profile_menu_item_bio"
                android:padding="8dp"
                android:src="@drawable/ic_bio_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/item_bio"
                app:layout_constraintStart_toEndOf="@id/item_bio"
                app:layout_constraintTop_toTopOf="@+id/item_bio">

                <TextView
                    android:id="@+id/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/profile_menu_item_bio"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/profile_menu_item_bio_sub"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/item_title"
                    app:layout_constraintTop_toBottomOf="@id/item_title" />
            </LinearLayout>

            <ImageView
                android:id="@+id/item_action"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/profile_action_placeholder"
                android:padding="16dp"
                android:src="@drawable/ic_chev_r_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="12dp"
            android:background="@color/muted" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_repos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_full_white_xs"
                android:contentDescription="@string/profile_menu_item_bio"
                android:padding="8dp"
                android:src="@drawable/ic_docs_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/item_repos"
                app:layout_constraintStart_toEndOf="@id/item_repos"
                app:layout_constraintTop_toTopOf="@+id/item_repos">

                <TextView
                    android:id="@+id/item_title_repos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/profile_menu_item_repos"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/profile_menu_item_repos_sub"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/item_title"
                    app:layout_constraintTop_toBottomOf="@id/item_title" />
            </LinearLayout>

            <ImageView
                android:id="@+id/item_action_repos"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/profile_action_placeholder"
                android:padding="16dp"
                android:src="@drawable/ic_chev_r_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/profile_button_label"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>